updated tables in admin

--- a/purrfect/index.html
+++ b/purrfect/index.html
@@ -1,22 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
-    <link rel="stylesheet" href="style.css">   
+<!DOCTYPE html> 
+<html> 
+<head> 
+	<meta charset="UTF-8"> 
+	<title>Purrfect Pet Store</title> 
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+	<link rel="stylesheet" href="style.css"> 
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> 
 </head> 
 <body> 
-	<div class="container1"> 
-		<div class="form-container1"> 
-			<form action="index.html" method="post"> 
-			<h3>Welcome to</h3> 
-			<img src="images/Background/indexlogo.png" alt="logo1"> 
-			<p>"We Provide Care, That Your Pet Deserves!"</p>
-			<a href="login.php" class="login">Log In</a> 
-			<a href="registration.php" class="register">Sign Up</a>
-			</form>	
+	<section>
+		<div class="circle"></div>
+		<header>
+            <a href="home.php"><img src="images/Background/logo.png" class="logo"></a> 
+			<div class="nav-bar">
+				<div class="toggle"></div>
+				<ul class="navigation"> 
+                    <li><a href="index.php">Home</a></li> 
+					<li><a href="products.php">Products</a></li> 
+					<li><a href="aboutus.php">About Us</a></li>
+                    <li><a href="login.php" class="auth-button">LOG IN</a></li>
+                    <li><a href="registration.php" class="auth-button">SIGN UP</a></li> 	
+					<!--<li><a href="#" onclick="logoutAlert()">Log Out</a></li>-->	
+				</ul> 
+			</div>
+		</header> 
+	<div class="content">
+		<div class="textBox">
+            <h4>Pets Thrive, <span-1>We Provide.</span-1></h4>
+			<p>Explore top-tier pet love at "Purrfect Pet Store," your ultimate online destination for pet products. 
+                We provide an extensive selection of high-quality accessories, food, and cages to cater to all your pet needs. </p> 
+			<a href="products.php">Order Now</a>
+		</div> 
+		<div class="imgBox"> 
+			<div class="swiper mySwiper">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide"><img src="./images/Background/icedcoffee1.png"/></div> 
+					<div class="swiper-slide"><img src="./images/Background/icedcoffee2.png"/></div> 
+					<div class="swiper-slide"><img src="./images/Background/icedcoffee3.png"/></div>
+					<div class="swiper-slide"><img src="./images/Background/icedcoffee4.png"/></div> 
+					<div class="swiper-slide"><img src="./images/Background/cappuccino.png"/></div>
+					<div class="swiper-slide"><img src="./images/Background/regularcoffee.png"/></div>
+				</div>
+			</div>
 		</div>
-	</div>	
+	</div>
+	<ul class="sci"> 
+        <li><a href="aboutus.php"><i class='bx bxl-facebook' ></i></li>
+		<li><a href="aboutus.php"><i class='bx bxl-twitter' ></i></li>
+		<li><a href="aboutus.php"><i class='bx bxl-instagram' ></i></li>
+	</ul> 
+	<div class="footer"> 
+        <p>Copyright 2023 | WebDev | Group 6</p>
+	</div>
+	<script src = "app.js"></script>
+	</section> 
 </body> 
-</html>
+</html> 
