--- a/purrfect/index.html
+++ b/purrfect/index.html
@@ -51,7 +51,7 @@
 		<li><a href="aboutus.php"><i class='bx bxl-instagram' ></i></li>
 	</ul> 
 	<div class="footer"> 
-        <p>Copyright 2023 | WebDev | Group 6</p>
+        <p>Copyright 2024 | Group 6</p>
 	</div>
 	<script src = "app.js"></script>
 	</section> 
